syntax = "proto3";
package cache;

import "google/protobuf/empty.proto";

option go_package="./grpc_service;grpc_service";

service Cache {
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Set (SetRequest) returns (google.protobuf.Empty) {}
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {}
}

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}
